# obs-ticker-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json
scripts/: ticker-hotkey.lua
src/: plugin-main.cpp  ticker-dock.cpp  ticker-dock.hpp  ticker-source.cpp  ticker-source.hpp
